Fix: User Action container z-index

--- a/Components/ui/Navbar/Navbar.module.css
+++ b/Components/ui/Navbar/Navbar.module.css
@@ -94,7 +94,7 @@
   transform: scale(0);
   transform-origin: right top;
   transition: 0.4s;
-  z-index: 1;
+  z-index: 2100;
 }
 .userNameBtnClk {
   transform: scale(1);
